<resources>
    <string name="app_name">jwork-android</string>
    <string name="register_now">Register Now</string>
    <string name="login">LOGIN</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">REGISTER</string>
    <string name="apply_now">Apply Now</string>
    <string name="job_name">Job Name</string>
    <string name="total_fee">Total Fee</string>
    <string name="text_view">Text View</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="job_category">Job Category</string>
    <string name="payment_method">Payment Method</string>
    <string name="job_fee">Job Fee</string>
    <string name="bank">Bank</string>
    <string name="referral_code">Referral Code</string>
    <string name="code">Code</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="count">COUNT</string>
    <string name="apply_now2">APPLY NOW</string>
    <string-array name="job_categories">
        <item>Web Developer</item>
        <item>Front End</item>
        <item>Back End</item>
        <item>UI</item>
        <item>UX</item>
        <item>Devops</item>
        <item>Data Analyst</item>
        <item>Data Scientist</item>
    </string-array>
</resources>