<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context=".ApplyJobActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="411dp"
            android:layout_height="730dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="281dp"
                    android:text="@string/apply_now"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/staticJobName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="77dp"
                    android:text="@string/job_name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pesanan" />

                <TextView
                    android:id="@+id/job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/staticCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/job_category"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticJobName" />

                <TextView
                    android:id="@+id/job_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_name" />

                <TextView
                    android:id="@+id/staticFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/job_fee"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticCategory" />

                <TextView
                    android:id="@+id/job_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_category" />

                <TextView
                    android:id="@+id/staticPayMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="46dp"
                    android:text="@string/payment_method"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticFee" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticPayMethod">

                    <RadioButton
                        android:id="@+id/ewallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/e_wallet" />

                    <RadioButton
                        android:id="@+id/bank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/bank" />
                </RadioGroup>

                <TextView
                    android:id="@+id/staticReferralCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="31dp"
                    android:text="@string/referral_code"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <EditText
                    android:id="@+id/referral_code"
                    android:layout_width="127dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="192dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/code"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_fee" />

                <TextView
                    android:id="@+id/staticTotalFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="31dp"
                    android:text="@string/total_fee"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticReferralCode" />

                <TextView
                    android:id="@+id/total_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/text_view"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/referral_code" />

                <Button
                    android:id="@+id/btnCount"
                    android:layout_width="272dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="69dp"
                    android:layout_marginTop="51dp"
                    android:layout_marginEnd="70dp"
                    android:text="@string/count"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticTotalFee" />

                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="272dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="69dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="19dp"
                    android:text="@string/apply_now2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticTotalFee" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>