<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/register_now"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputLoginPassword"
        android:layout_width="301dp"
        android:layout_height="47dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputLoginEmail"
        android:layout_width="301dp"
        android:layout_height="47dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="307dp"
        android:layout_height="51dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>